--- a/20181223/WebContent/05_sendInfoMore.html
+++ b/20181223/WebContent/05_sendInfoMore.html
@@ -5,7 +5,7 @@
 <title>Sending Information More</title>
 </head>
 <body>
-	<form action="sendInfoMore">
+	<form action="sendInfo">
 		이상형 선택<br />
 		<input type="checkbox" name="star" value="아이유" id="iu" />
 		<label for="iu">아이유</label><br />
